--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  /* border: 1px solid darkblue; */
+  border: 1px solid darkblue;
   border-collapse: collapse;
   /* background-color: rgba(0, 255, 0, 0.2); */
 }
@@ -24,14 +24,43 @@
   justify-content: space-around;
   /* background-color: tomato; */
 
+  max-width: 1280px;
+
   /* TODO - remove later */
-  margin-top: 100px;
-  width: 1280px;
+  /* margin-top: 100px;
+  width: 1280px; */
+}
+
+header {
+  margin: 0 auto;
+  max-width: 1280px;
+  padding: 20px 0;
+
+  display: flex;
+}
+
+.menu-container {
+  display: flex;
+  gap: 50px;
+  margin-left: 60px;
+}
+
+.menu-container a:link,
+.menu-container a:visited {
+  color: #1d364d;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.menu-container a:active,
+.menu-container a:hover {
+  text-decoration: underline;
 }
 
 .app--panel {
   /* // flex child */
-
   /* TODO remove-later */
   flex-basis: 590px;
 }
